Updating overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,11 @@ body {
         padding-top: 5vh;
         padding-bottom: 5vh;
     }
+    
+    .row {
+        width: 90%;
+    }
+
     .card {
         overflow: hidden;
     }
@@ -114,14 +119,18 @@ body {
         left: 0;
         padding: 40px;
     }
+
+    .card img {
+        height: 100%;
+    }
     .card:hover img {
         top: 80%;
         left: 50%;
-        height: 300px;
+        height: 75%;
     }
     
     .card .content .social a {
-        margin-left: 5px;
-        margin-right: 5px;
+        margin-left: 2px;
+        margin-right: 2px;
     }
 }
